[fix] Adjust css to fix multiple layout problems 1. Rank 分數對齊，手機版排成直線 2. 知識王圖片題調整手機板圖片大小 3. CardModal 隱藏 overflow 捲軸 4. GameIntroPage 調整知識王位置 5. IntroPage 調整故事 div 大小 6. IntroPage 調整文字單位(rem->vh)解決 deploy 後文字 rem 跑掉問題 7. CardModal 元素移到html結構最後面，嘗試解決 safari z-index 問題

--- a/src/components/Game/Rank.module.css
+++ b/src/components/Game/Rank.module.css
@@ -77,14 +77,15 @@ h2 {
 } */
 .right-circle {
   height: 100%;
-  width: 20vw;
+  width: 15vw;
   background-color: white;
   border-style: solid;
   border-width: 0;
   border-radius: 0 10vh 10vh 0;
 
   display: flex;
-  justify-content: space-evenly;
+  padding: 0 5vw;
+  justify-content: space-between;
   align-items: center;
   color: blue;
   font-size: 4vh;
@@ -105,6 +106,17 @@ h2 {
   .rankTitle h2 {
     font-size: 4vh;
   }
+
+  .rank {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .record {
+    height: 5vh;
+    margin: 0.5vh;
+  }
+
   .right-circle,
   .left-circle {
     font-size: 5vw;
@@ -114,6 +126,6 @@ h2 {
     width: 15vw;
   }
   .right-circle {
-    width: 30vw;
+    width: 40vw;
   }
 }
