--- a/src/components/QuizGame/Choices.module.css
+++ b/src/components/QuizGame/Choices.module.css
@@ -17,11 +17,9 @@
   transition: 0.5s;
   cursor: pointer;
   border: 1vh solid transparent;
-}
-@media (min-width: 600px) {
-  .choice:hover {
-    border-color: black;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .choice img {
@@ -47,5 +45,15 @@
 @media (max-width: 600px) {
   .choices {
     width: 70vw;
+  }
+
+  .choice img {
+    width: 60%;
+  }
+}
+
+@media (min-width: 600px) {
+  .choice:hover {
+    border-color: black;
   }
 }
