--- a/src/components/UI/CardModal.module.css
+++ b/src/components/UI/CardModal.module.css
@@ -40,7 +40,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .title {
