--- a/src/pages/GameIntroPage.module.css
+++ b/src/pages/GameIntroPage.module.css
@@ -10,6 +10,9 @@
   position: absolute;
   right: 10vw;
   top: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .memory-display {
@@ -38,8 +41,11 @@
 /* quiz game styles */
 .quiz-intro {
   position: absolute;
-  left: 10vw;
-  bottom: 10vh;
+  left: 8vw;
+  bottom: 8vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .quiz-display {
   width: 15vw;
@@ -56,7 +62,7 @@
 }
 
 .quiz-question {
-  height: 5vw;
+  height: 10vh;
   background-color: white;
   border-radius: 1vw;
   margin-bottom: 1vw;
@@ -85,5 +91,9 @@
 
   .quiz-display {
     width: 30vw;
+  }
+
+  .quiz-question {
+    height: 5vh;
   }
 }
